--- a/README.html
+++ b/README.html
@@ -394,8 +394,22 @@ pre code, pre tt {
     </style>
 </head>
 <body>
-    <a name="maslosoft_sitcom"></a><h1>Maslosoft Sitcom<a class="anchorlink" href="#maslosoft_sitcom"></a></h1>
-<a name="signals_based_console_application_wrapper"></a><h3>Signals based console application wrapper<a class="anchorlink" href="#signals_based_console_application_wrapper"></a></h3>
+    <!--header-->
+<!-- Auto generated do not modify between `header` and `/header` -->
+
+<h1><a href="http://maslosoft.com/sitcom/">Maslosoft Sitcom</a></h1>
+<p><a href="http://maslosoft.com/sitcom/"><em>Signals based console application wrapper</em></a></p>
+<p><a href="https://packagist.org/packages/maslosoft/sitcom" title="Latest Stable Version">
+<img src="https://poser.pugx.org/maslosoft/sitcom/v/stable.svg" alt="Latest Stable Version" style="height: 20px;"/>
+</a>
+<a href="https://packagist.org/packages/maslosoft/sitcom" title="License">
+<img src="https://poser.pugx.org/maslosoft/sitcom/license.svg" alt="License" style="height: 20px;"/>
+</a>
+<a href="https://scrutinizer-ci.com/g/Maslosoft/Sitcom/?branch=master"><img src="https://scrutinizer-ci.com/g/Maslosoft/Sitcom/badges/quality-score.png?b=master" alt="Scrutinizer Code Quality"></a></p>
+<a name="quick_install"></a><h3>Quick Install<a class="anchorlink" href="#quick_install"></a></h3>
+<pre class="prettyprint">    composer require maslosoft/sitcom:&quot;*&quot;</pre>
+<!--/header-->
+
 
 </body>
 </html>
