--- a/README.html
+++ b/README.html
@@ -411,6 +411,7 @@ pre code, pre tt {
 <!--/header-->
 
 <p>Sitcom allows you to call commands from many sources from one executable.</p>
+<p><strong>Note:</strong> Currently this will only work for self-contained commands. If command relies on it&#39;s application, it will not be provided to it.</p>
 <p>To add command to sitcom add it via signals, here is example from hedron:</p>
 <pre class="prettyprint">// Use statments skipped
 class RenderTemplateCommand extends Symfony\Component\Console\Command\Command
